--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
     "osc-progress": "^0.3.0",
     "pdfjs-dist": "^5.4.624",
     "playwright-core": "1.58.2",
+    "pptxgenjs": "^4.0.1",
     "qrcode-terminal": "^0.12.0",
     "sharp": "^0.34.5",
     "sqlite-vec": "0.1.7-alpha.2",
